# crawler-rs

./: .gitignore  Cargo.toml  README.md  product_urls.txt  urls.example.txt
goodreads_profile/: DevToolsActivePort  Local State
goodreads_profile/Default/: BrowsingTopicsState  DIPS  Favicons  History  Login Data  Preferences  Secure Preferences  Web Data
goodreads_profile/Default/Cache/Cache_Data/: data_0  data_1  data_2  f_000001  f_000004  f_000005  f_000006  f_000008  f_000009  f_00000a  index  (+21 more)
goodreads_profile/Default/DawnGraphiteCache/: data_1  index
goodreads_profile/Default/DawnWebGPUCache/: data_1  index
goodreads_profile/Default/GPUCache/: data_1  index
goodreads_profile/Default/Network/: Network Persistent State  Reporting and NEL  TransportSecurity
goodreads_profile/Default/Session Storage/: LOG
goodreads_profile/Default/Sessions/: Session_13417864759931941  Tabs_13417864789578516
goodreads_profile/Default/Shared Dictionary/: db
goodreads_profile/Default/WebStorage/: QuotaManager
goodreads_profile/GrShaderCache/: data_0  data_1  f_000001  f_000002  f_000003  f_000004  f_000005  f_000006  f_000007  f_000008  f_000009  index
goodreads_profile/GraphiteDawnCache/: data_1  index
goodreads_profile/ShaderCache/: data_1  index
goodreads_profile/segmentation_platform/: ukm_db
src/: csv_out.rs  engine.rs  errors.rs  input.rs  main.rs  merge.rs  models.rs  plan_a.rs  plan_b.rs  plan_c.rs  plan_d.rs  plan_e.rs  plan_f.rs  plan_g.rs  plan_h.rs  plan_i.rs  plan_j.rs  plan_k.rs  plan_l.rs  plan_m.rs  plan_n.rs  plan_o.rs  plan_p.rs  test_mode.rs
(+59 files in other folders)
