[package]
name = "naver_crawler_engine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "instagram"
path = "src/plan_l.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }

# CLI
clap = { version = "4", features = ["derive"] }

# HTTP (Plan A)
reqwest = { version = "0.12", features = ["rustls-tls", "cookies", "gzip", "brotli", "zstd", "json"] }

# HTML parsing
scraper = "0.20"

# Data model + JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = { version = "2", features = ["serde"] }

# CSV output
csv = "1.3"

# Errors + logging
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Plan B (WebDriver)
thirtyfour = "0.35"

# Plan C (CDP - ChromeDriver 서버 불필요)
chromiumoxide = { version = "0.7", features = ["tokio-runtime"] }
futures = "0.3"

# Plan E (Smartstore WebDriver)
anyhow = "1"
regex = "1"

# Plan G (Reddit)
chrono = "0.4"

# Plan H (Naver Blog Search)
urlencoding = "2"
rand = "0.8"

# Plan I (Threads)
rust_xlsxwriter = "0.75"

# Plan L (Instagram)
dotenvy = "0.15"
